--- a/package.json
+++ b/package.json
@@ -13,15 +13,20 @@
     "react-native": "0.58.5",
     "react-native-axios": "^0.17.1",
     "react-native-css-transformer": "^1.2.4",
+    "react-native-datepicker": "^1.7.2",
     "react-native-elements": "^1.1.0",
     "react-native-fontawesome": "^6.0.1",
+    "react-native-in-app-notification": "^3.0.0",
     "react-native-ionicons": "^4.5.5",
     "react-native-material-design": "^0.3.7",
+    "react-native-router-flux": "^4.0.6",
+    "react-native-simple-radio-button": "^2.7.3",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.2",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "toggle-switch-react-native": "^2.0.2"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
