--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-material-design": "^0.3.7",
     "react-native-router-flux": "^4.0.6",
     "react-native-simple-radio-button": "^2.7.3",
+    "react-native-swiper": "^1.5.14",
     "react-native-vector-icons": "^6.3.0",
     "react-navigation": "^3.3.2",
     "react-redux": "^6.0.1",
